bad/assign_field_bool_fcall_null.example_compiler_output
ERROR
[1mbad/assign_field_bool_fcall_null.lat:8:12: [1;31merror: [0;1massigning to `boolean` from incompatible type `null`[m
	foo().fld = null;
	          [1;32m^[m
